--- a/DU2425S1_NLP_HW1_BY__your_name_ (25).ipynb
+++ b/DU2425S1_NLP_HW1_BY__your_name_ (25).ipynb
@@ -5693,11 +5693,11 @@
         "add_to_comparison_table(\"4.4\",'MultinomialNB','TF-IDF','default',\"remove stop words\",accuracy,balanced_accuracy)"
       ],
       "metadata": {
-        "id": "Tlp45V5c35yy",
-        "outputId": "5af6afef-bfe5-46a1-a48b-e85ff97bf3ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Tlp45V5c35yy",
+        "outputId": "5af6afef-bfe5-46a1-a48b-e85ff97bf3ee"
       },
       "execution_count": 59,
       "outputs": [
@@ -5745,54 +5745,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "comparison_table"
-      ],
-      "metadata": {
-        "id": "l-q5cdsv_1J3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6ecb0ca2-3aeb-43bb-f02e-0219ab60330e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'question_step_number': ['4.3', '4.4', '4.4', '4.4', '4.4'],\n",
-              " 'model_name': ['MultinomialNB',\n",
-              "  'MultinomialNB',\n",
-              "  'MultinomialNB',\n",
-              "  'MultinomialNB',\n",
-              "  'MultinomialNB'],\n",
-              " 'features': ['TF-IDF', 'TF-IDF', 'TF-IDF', 'TF-IDF', 'TF-IDF'],\n",
-              " 'model_parameters': ['default', 'default', 'default', 'default', 'default'],\n",
-              " 'preprocessing_methods': ['None',\n",
-              "  'remove links',\n",
-              "  'remove hashtag',\n",
-              "  'remove hashtag',\n",
-              "  'remove punctuation'],\n",
-              " 'accuracy': [0.5621624300084238,\n",
-              "  0.5658292453297656,\n",
-              "  0.5601803676725633,\n",
-              "  0.5191516773202517,\n",
-              "  0.5458599672959714],\n",
-              " 'balance_accuracy': [0.5378027283051499,\n",
-              "  0.5418062207004598,\n",
-              "  0.5355526562839059,\n",
-              "  0.48370713677140187,\n",
-              "  0.5169277571582102]}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 93
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "I8DcdwLUvaCc"
@@ -5803,12 +5755,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "tasleVJ4vdWb"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "func_list=[remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces]\n",
+        "X_trian=data_trian_df[\"sent\"].apply(lambda x: normaliz_and_clean(x, func_list))\n",
+        "vectorizer = TfidfVectorizer()\n",
+        "X_train_tfidf = vectorizer.fit_transform(X_trian)\n",
+        "X_test_tfidf = vectorizer.transform(X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf = MultinomialNB()\n",
+        "clf.fit(X_train_tfidf, Y_trian)\n",
+        "accuracy,balanced_accuracy,report=test_naive_bayes (X_test_tfidf,Y_test)\n",
+        "add_to_comparison_table(\"4.5\",'MultinomialNB','TF-IDF','default',\"remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces\",accuracy,balanced_accuracy)"
+      ],
+      "metadata": {
+        "id": "vN-NjR6P47DF",
+        "outputId": "e4c2e457-248d-4fa9-b8be-e2dd1364fb96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.4867075664621677\n",
+            "f_score: 0.4525644680271463\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf = MultinomialNB(alpha=0.05)\n",
+        "clf.fit(X_train_tfidf, Y_trian)\n",
+        "accuracy,balanced_accuracy,report=test_naive_bayes (X_test_tfidf,Y_test)\n",
+        "add_to_comparison_table(\"4.5\",'MultinomialNB','TF-IDF','alpha=0.05',\"remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces\",accuracy,balanced_accuracy)"
+      ],
+      "metadata": {
+        "id": "ZcpTpCzW47k8",
+        "outputId": "16aebb6e-f148-451e-fe50-bdad29c9a82a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.6452295324730273\n",
+            "f_score: 0.638513044695855\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5827,6 +5839,51 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FGGbFz4p6Ggu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "C06lkmwJ6GmY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_DJ3zLmq6G0V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8YjFaw916HCJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_DEYGSDN6HPp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
