--- a/DU2425S1_NLP_HW1_BY__your_name_ (25).ipynb
+++ b/DU2425S1_NLP_HW1_BY__your_name_ (25).ipynb
@@ -5777,11 +5777,11 @@
         "add_to_comparison_table(\"4.5\",'MultinomialNB','TF-IDF','default',\"remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces\",accuracy,balanced_accuracy)"
       ],
       "metadata": {
-        "id": "vN-NjR6P47DF",
-        "outputId": "e4c2e457-248d-4fa9-b8be-e2dd1364fb96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vN-NjR6P47DF",
+        "outputId": "e4c2e457-248d-4fa9-b8be-e2dd1364fb96"
       },
       "execution_count": 62,
       "outputs": [
@@ -5804,11 +5804,11 @@
         "add_to_comparison_table(\"4.5\",'MultinomialNB','TF-IDF','alpha=0.05',\"remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces\",accuracy,balanced_accuracy)"
       ],
       "metadata": {
-        "id": "ZcpTpCzW47k8",
-        "outputId": "16aebb6e-f148-451e-fe50-bdad29c9a82a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZcpTpCzW47k8",
+        "outputId": "16aebb6e-f148-451e-fe50-bdad29c9a82a"
       },
       "execution_count": 63,
       "outputs": [
@@ -5833,25 +5833,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "AF_8KYkvvhSB"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "func_list=[remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces]\n",
+        "X_trian=data_trian_df[\"sent\"].apply(lambda x: normaliz_and_clean(x, func_list))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "vectorizer = TfidfVectorizer(max_df=0.6)\n",
+        "X_train_tfidf = vectorizer.fit_transform(X_trian)\n",
+        "X_valid_tfidf = vectorizer.transform(X_valid)\n",
+        "clf = MultinomialNB(alpha=0.05)\n",
+        "clf.fit(X_train_tfidf, Y_trian)\n",
+        "accuracy,balanced_accuracy,report=test_naive_bayes (X_valid_tfidf,Y_valid)\n",
+        "add_to_comparison_table(\"4.6\",'MultinomialNB','TF-IDF','alpha=0.05,max_df=0.6',\"remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces\",accuracy,balanced_accuracy)"
+      ],
       "metadata": {
-        "id": "FGGbFz4p6Ggu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FGGbFz4p6Ggu",
+        "outputId": "c1f3c6dd-ad6f-4551-e2b2-5fdbacabfc6f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.6452295324730273\n",
+            "f_score: 0.638513044695855\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "vectorizer = TfidfVectorizer(max_df=0.6)\n",
+        "X_train_tfidf = vectorizer.fit_transform(X_trian)\n",
+        "X_valid_tfidf = vectorizer.transform(X_valid)\n",
+        "clf = MultinomialNB(alpha=0.05)\n",
+        "clf.fit(X_train_tfidf, Y_trian)\n",
+        "accuracy,balanced_accuracy,report=test_naive_bayes (X_test_tfidf,Y_test)\n",
+        "add_to_comparison_table(\"4.6\",'MultinomialNB','TF-IDF','alpha=0.05,max_df=0.6',\"remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces\",accuracy,balanced_accuracy)"
+      ],
       "metadata": {
         "id": "C06lkmwJ6GmY"
       },
