--- a/DU2425S1_NLP_HW1_BY__your_name__(25) (23).ipynb
+++ b/DU2425S1_NLP_HW1_BY__your_name__(25) (23).ipynb
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 21,
       "metadata": {
         "id": "af6058ed"
       },
@@ -6463,10 +6463,23 @@
         "  print('Running on CPU or single GPU')"
       ],
       "metadata": {
-        "id": "mFy2ndgceJ0C"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mFy2ndgceJ0C",
+        "outputId": "23b6b115-1986-46ba-8e84-f47dbe1ae284"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running on TPU  \n",
+            "All devices:  [LogicalDevice(name='/device:TPU:0', device_type='TPU'), LogicalDevice(name='/device:TPU:1', device_type='TPU'), LogicalDevice(name='/device:TPU:2', device_type='TPU'), LogicalDevice(name='/device:TPU:3', device_type='TPU'), LogicalDevice(name='/device:TPU:4', device_type='TPU'), LogicalDevice(name='/device:TPU:5', device_type='TPU'), LogicalDevice(name='/device:TPU:6', device_type='TPU'), LogicalDevice(name='/device:TPU:7', device_type='TPU')]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -6487,25 +6500,25 @@
       "metadata": {
         "id": "xp-CEx__gptJ"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# X_train_tfidf = X_train_tfidf.toarray()\n",
-        "# X_valid_tfidf = X_valid_tfidf.toarray()\n",
-        "# X_test_tfidf = X_test_tfidf.toarray()\n",
+        "X_train_tfidf = X_train_tfidf.toarray()\n",
+        "X_valid_tfidf = X_valid_tfidf.toarray()\n",
+        "X_test_tfidf = X_test_tfidf.toarray()\n",
         "\n",
-        "# label_encoder = LabelEncoder()\n",
-        "# Y_trian_encoded = label_encoder.fit_transform(Y_trian)\n",
-        "# Y_valid_encoded = label_encoder.transform(Y_valid) # استخدام نفس المشفر من أجل التناسق\n",
-        "# Y_test_encoded = label_encoder.transform(Y_test)"
+        "label_encoder = LabelEncoder()\n",
+        "Y_trian_encoded = label_encoder.fit_transform(Y_trian)\n",
+        "Y_valid_encoded = label_encoder.transform(Y_valid) # استخدام نفس المشفر من أجل التناسق\n",
+        "Y_test_encoded = label_encoder.transform(Y_test)"
       ],
       "metadata": {
         "id": "n9dePezuiQJ4"
       },
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -6536,9 +6549,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fT7lMUt8exFM",
-        "outputId": "3210f5dd-a429-468f-b60a-19012e535744"
+        "outputId": "188ac63d-3f58-440f-bce0-4bca2e7dc68d"
       },
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -6548,19 +6561,21 @@
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " dense (Dense)               (None, 128)               83668096  \n",
+            " embedding (Embedding)       (None, None, 128)         83667968  \n",
             "                                                                 \n",
-            " dropout (Dropout)           (None, 128)               0         \n",
+            " dense (Dense)               (None, None, 128)         16512     \n",
             "                                                                 \n",
-            " dense_1 (Dense)             (None, 64)                8256      \n",
+            " dropout (Dropout)           (None, None, 128)         0         \n",
             "                                                                 \n",
-            " dropout_1 (Dropout)         (None, 64)                0         \n",
+            " dense_1 (Dense)             (None, None, 64)          8256      \n",
             "                                                                 \n",
-            " dense_2 (Dense)             (None, 19)                1235      \n",
+            " dropout_1 (Dropout)         (None, None, 64)          0         \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             (None, None, 19)          1235      \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 83677587 (319.20 MB)\n",
-            "Trainable params: 83677587 (319.20 MB)\n",
+            "Total params: 83693971 (319.27 MB)\n",
+            "Trainable params: 83693971 (319.27 MB)\n",
             "Non-trainable params: 0 (0.00 Byte)\n",
             "_________________________________________________________________\n"
           ]
@@ -6570,27 +6585,10 @@
     {
       "cell_type": "code",
       "source": [
-        "def create_deep_neural_network(input_dim, num_classes):\n",
-        "  with strategy.scope(): # Use the distribution strategy\n",
-        "    model = tf.keras.Sequential([\n",
-        "        tf.keras.layers.Dense(128, activation='relu', input_shape=(input_dim,)),\n",
-        "        tf.keras.layers.Dropout(0.5),  # Add dropout for regularization\n",
-        "        tf.keras.layers.Dense(64, activation='relu'),\n",
-        "        tf.keras.layers.Dropout(0.5),\n",
-        "        tf.keras.layers.Dense(num_classes, activation='softmax')\n",
-        "    ])\n",
-        "    model.compile(optimizer='adam',\n",
-        "                  loss='sparse_categorical_crossentropy',  # For multi-class classification\n",
-        "                  metrics=['accuracy'])\n",
-        "    return model\n",
-        "\n",
-        "input_dim = X_train_tfidf.shape[1]\n",
-        "num_classes = len(set(Y_trian))\n",
-        "model = create_deep_neural_network(input_dim, num_classes)\n",
-        "model.summary()\n"
+        "model.fit(X_train_tfidf, Y_trian_encoded, epochs=10, batch_size=32, validation_data=(X_valid_tfidf, Y_valid_encoded),verbose=1)"
       ],
       "metadata": {
-        "id": "MvNUBhmiyaXS"
+        "id": "Wle2hduBDQPE"
       },
       "execution_count": null,
       "outputs": []
