--- a/DU2425S1_NLP_HW1_BY__your_name__(25)_(23) (7).ipynb
+++ b/DU2425S1_NLP_HW1_BY__your_name__(25)_(23) (7).ipynb
@@ -6124,11 +6124,11 @@
       "cell_type": "code",
       "execution_count": 51,
       "metadata": {
-        "id": "NtuJwlRzkbtM",
-        "outputId": "d303c2f1-5c4d-4f12-bd17-aed786cc1f93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NtuJwlRzkbtM",
+        "outputId": "d303c2f1-5c4d-4f12-bd17-aed786cc1f93"
       },
       "outputs": [
         {
@@ -6252,11 +6252,11 @@
         "add_to_comparison_table(\"4.6\",'MultinomialNB','TF-IDF','alpha=0.8,max_features=50000',\"remove_link,remove_symbols,remove_stop_words,remove_diacritics,remove_extra_spaces\",accuracy,balanced_accuracy)"
       ],
       "metadata": {
-        "id": "pSA4GrvAqsZQ",
-        "outputId": "83694f1b-31a2-4d1c-fbc3-59f49b21185e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pSA4GrvAqsZQ",
+        "outputId": "83694f1b-31a2-4d1c-fbc3-59f49b21185e"
       },
       "execution_count": 56,
       "outputs": [
@@ -6428,7 +6428,7 @@
       },
       "outputs": [],
       "source": [
-        "vectorizer = TfidfVectorizer(ngram_range=(1,2),max_features=500000)\n",
+        "vectorizer = TfidfVectorizer(max_features=50000)\n",
         "X_train_tfidf = vectorizer.fit_transform(X_trian)\n",
         "X_test_tfidf = vectorizer.transform(X_test)\n",
         "X_valid_tfidf = vectorizer.transform(X_valid)"
